# fqs

./: .clang-format  CMakeLists.txt  Makefile  README.md  example.fqs  fqs.fqs  fqs.grammar  grammar.yml
include/: errors.hh  fqs.hh  lex.hh  pos.hh  token.hh  tt.hh  util.hh
src/: CMakeLists.txt  build_code.cpp  build_code.h  error.cpp  error.h  error.hpp  errors.cc  lex.cc  lex.hh  lexer.cpp  lexer.h  main.cc  main.cpp  node.cpp  node.h  parser.cpp  parser.h  pos.cc  pos.cpp  pos.hh  pos.hpp  position.cpp  position.h  tok.cpp  tok.hpp  token.cc  token.cpp  token.h  token.hh  tokenizer.cpp  tokenizer.hpp  util.cc  util.cpp  util.h  util.hh
src/error/: error.cpp  error.hpp  lex-error.cpp  lex-error.hpp
src/util/: result.hpp  strop.cpp  strop.hpp
