cmake_minimum_required(VERSION 3.10)
project(fqs VERSION 1.0.0 DESCRIPTION "fqs")
set(CMAKE_C_COMPILER "/Library/Developer/CommandLineTools/usr/bin/clang")
set(CMAKE_CXX_COMPILER "/Library/Developer/CommandLineTools/usr/bin/clang++")
add_executable(fqs main.cpp lexer.h lexer.cpp position.h position.cpp util.h util.cpp token.h token.cpp error.h error.cpp build_code.h build_code.cpp)
target_compile_features(fqs PUBLIC cxx_std_20)
target_include_directories(fqs PUBLIC ${CMAKE_SOURCE_DIR}/src)
